--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,6 @@
-<form action="answer" data-turbo="false">
+<form action="answer" data-turbo="false"class= "mb-3">
+    <div class= "container form-floating" >
   <input type="text" name="question">
   <input type="submit" value="Ask!">
+  </div>
 </form>
